--- a/container@.service
+++ b/container@.service
@@ -7,10 +7,12 @@ RequiresMountsFor=%t/containers
 
 [Service]
 WorkingDirectory=/srv/containers/%I
+Environment=PODMAN_LOG_DRIVER=journald
+EnvironmentFile=-/srv/containers/%I/service.env
 Environment=PODMAN_SYSTEMD_UNIT=%n
 TimeoutStartSec=infinity
 TimeoutStopSec=70
-ExecStart=/usr/bin/podman play kube --replace --service-container=true deployment.yaml
+ExecStart=/usr/bin/podman play kube --replace --service-container=true --log-driver $PODMAN_LOG_DRIVER deployment.yaml
 ExecStop=/usr/bin/podman play kube --down deployment.yaml
 Type=notify
 NotifyAccess=all
