--- a/container@.service
+++ b/container@.service
@@ -7,12 +7,11 @@ RequiresMountsFor=%t/containers
 
 [Service]
 WorkingDirectory=/srv/containers/%I
-Environment=PODMAN_LOG_DRIVER=journald
 EnvironmentFile=-/srv/containers/%I/systemd.env
 Environment=PODMAN_SYSTEMD_UNIT=%n
 TimeoutStartSec=infinity
 TimeoutStopSec=70
-ExecStart=/usr/bin/podman kube play --replace --service-container=true --log-driver $PODMAN_LOG_DRIVER pod.yaml
+ExecStart=/usr/bin/podman kube play --replace --service-container=true $PODMAN_EXTRA_ARGS pod.yaml
 ExecStop=/usr/bin/podman kube down pod.yaml
 Type=notify
 NotifyAccess=all
